--- a/style.css
+++ b/style.css
@@ -22,12 +22,16 @@ a, .btn {
 header{
     align-items: center;
     display: flex;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
 }
 
 nav, .nav-links {
     
     display: flex;
 }
+
 nav{
     
     display: flex;
@@ -83,6 +87,7 @@ a{
 /*Hamburger Menu*/
 #hamburger-nav {
     display: none;
+    
 }
 
 .hamburger-menu {
@@ -143,7 +148,6 @@ a{
 .section_pic-container {
     display: flex;
     margin: -50px 190px 0px 0px;
-    
     width: 330px;
     height: 330px;
     border-radius: 60%;
@@ -190,7 +194,7 @@ p {
 
 .highlight {
     font-weight: bold;
-    color: #ffff; /* Color used for highlight */
+    color: #ffff;
 }
 
 
@@ -233,94 +237,18 @@ p {
     background-color: #2f5a5a;
 }
 
-#about{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 250px;
-    background-color: #2f5a5a;
-    border-radius: 10%;
-    height: 765px;
-    border: 4px solid black;
-}
-
-.about_container{
-    display: flex;
-    width: 1127px;
-    height: 535px;
-    border: 4px solid black;
-    justify-content: flex-start;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    gap: 1;
-    
-}
-.gif{
-    display: flex;
-    width: 166px;
-    height: 195px;
-    
-
-}
-.box1{
-    display: flex;
-    width: 166px;
-    height: 335px;
-    background-color: #284B63;
-    margin-top: -339px;
-
-}
-.box2{
-    display: flex;
-    width: 404px;
-    height: 306px;
-    background-color: #D9D9D9;
-    border: 2px solid black;
-}
-.education_container{
-    width: 404px;
-    height: 223px;
-    background: #353533;
-    margin-top: -225px;
-    margin-left: 2px;
-}
-.aboutme_container{
-    display: flex;
-    width: 330px;
-    height: 533px;
-    background-color: #D9D9D9;
-    margin-left: 1px;
-}
-.skillset_container{
-    display: flex;
-    width: 217px;
-    height: 535px;
-    background-color: #284B63;
-    margin-left: 4px;
-}
 
 /*PROJECT*/
-#project{  
-    margin-top: 250px;
-    background-color: #D9D9D9;
-    height: 765px;
-}
-
-.project_container{
-    position: absolute;
-    width: 1000px;
-    margin: 180px;
-   
-}
 
 
-.header2{
-    font-size: 48px;
-    text-align: left;
-}
+/*Contact*/
 
-.p_project{
-    font-size: 24px;
-    text-align: left;
-    color: #353535;
-}
+
+
+
+
+
+
+
+
+
