--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -32,7 +32,7 @@
         margin: 50px 20px 0;
     }
     #hamburger-nav{
-        width: 283px;
+        width: 200px;
         height: 49px;
     }
     .nav-links{
@@ -43,6 +43,31 @@
         margin-right: 1.25rem;
     
     }
+
+    .section_pic-container {
+        display: flex;
+        margin: -50px 190px 0px 0px;
+        width: 200px;
+        height: 200px;
+        border-radius: 60%;
+        background-color: #D9D9D9;
+        overflow: hidden;
+        box-shadow: 0 0 0 2px #1AABB0;
+        justify-content: center; 
+        align-items: center;
+       
+        padding-left: auto;
+    
+    }
+
+    .hero{
+        width: 140px;
+        height: 140px;
+        border-radius: 60%;
+        
+    }
+    
+    
 
 
 
