--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -5,8 +5,9 @@
     }
     #hamburger-nav{
         display: flex;
-       width: 666.93px;
-        height: 65.28px;
+        width: 666.93px;
+        height: 50px;
+       
     }
     .nav-links:not(:first-child) {display: none;}
     .nav-links.icon {
@@ -22,18 +23,26 @@
         padding-left: 50px;
         margin-top: 150px;
         color: #D9D9D9;
+        
+    }
+    .logo{
+        font-size: 2.9rem;
+        
     }
       
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 360px) {
+    .html{
+        font-size: 47%;
+    }
     .logo{
         font-size: 1.7rem;
         margin: 50px 20px 0;
     }
     #hamburger-nav{
-        width: 283px;
-        height: 49px;
+        width: 200px;
+        height: 40px;
     }
     .nav-links{
         font-size: 1px;
@@ -41,8 +50,72 @@
     .ey{
         font-size: 1rem;
         margin-right: 1.25rem;
+    }
+
+    #profile{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 500px;
+        
+    }
+    .section_pic-container {
+        margin: 30px 70px 0 auto;
+        width: 200px;
+        height: 200px;
+        box-shadow: 0 0 0 2px #1AABB0;
+       
+    }
+    .hero{
+        width: 140px;
+        height: 140px;
+    }
+
+
+    .intro {
+        padding-left: auto;
+        margin-top: 200px;
+        color: #D9D9D9;
+        
+       
+        
+    }
+    .highlight {
+        font-weight: bold;
+        color: #ffff;
+    }
+
+    .ellipse {
+        font-size: 1.6rem;
+        font-weight: normal;
+        background: rgba(0, 0, 0, 0);
+        border: 2px solid #00B4A2;
+        border-radius: 100% / 100%; 
+    
+       
+    }
+    h1 {
+        font-size: 1.6rem;
+        font-weight: normal;
+        margin-top: 300px;
+    }
+    p {
+        overflow: visible;
+        font-size: 1.6rem;
+        margin-top: 0.5rem;
+        margin-bottom: 1rem;
+    }
+    .btn-container{
+        padding-left: 50px;
+        margin-top: 20px;
     
     }
+    .btn {
+        font-size: 0.7rem;
+    }
+    
+    
 
 
 
