--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+  
    
 }
 
@@ -22,12 +24,18 @@ a, .btn {
 header{
     align-items: center;
     display: flex;
+    position: sticky;
+    justify-content: center;
+    top: 0;
+    z-index: 1000;
+    
 }
 
 nav, .nav-links {
     
     display: flex;
 }
+
 nav{
     
     display: flex;
@@ -83,6 +91,7 @@ a{
 /*Hamburger Menu*/
 #hamburger-nav {
     display: none;
+    
 }
 
 .hamburger-menu {
@@ -139,11 +148,33 @@ a{
 
 /* SECTIONS*/
 
+#profile{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 500px;
+   
+}
+.homepage_container{
+    width:1100px;
+    flex-wrap: wrap;
+    
+}
+
+
+
+.intro {
+    padding-left: 100px;
+    margin-top: 140px;
+    color: #D9D9D9;
+    text-align: left;
+}
+
 
 .section_pic-container {
     display: flex;
-    margin: -50px 190px 0px 0px;
-    
+    margin: 50px 40px 0px 0px;
     width: 330px;
     height: 330px;
     border-radius: 60%;
@@ -157,7 +188,6 @@ a{
 
 }
 
-
 .hero{
     width: 250px;
     height: 250px;
@@ -165,12 +195,7 @@ a{
     
 }
 
-.intro {
-    padding-left: 200px;
-    margin-top: 150px;
-    color: #D9D9D9;
-    text-align: left;
-}
+
 
 
 
@@ -190,16 +215,16 @@ p {
 
 .highlight {
     font-weight: bold;
-    color: #ffff; /* Color used for highlight */
+    color: #ffff;
 }
 
 
-.shesh {
+.ellipse {
     font-size: 2.5rem;
     font-weight: normal;
-    background: rgba(0, 0, 0, 0); /* Invisible background */
+    background: rgba(0, 0, 0, 0);
     border: 3px solid #00B4A2;
-    border-radius: 100% / 100%; /* Creates an elliptical shape */
+    border-radius: 100% / 100%; 
 
    
 }
@@ -213,7 +238,7 @@ p {
 
 
 .btn-container{
-    padding-left: 250px;
+    padding-left: 130px;
     margin-top: 50px;
 }
 .btn {
@@ -222,105 +247,27 @@ p {
     padding: 10px 30px;
     border-radius: 10px;
     text-decoration: none;
-    font-size: 1.3rem;
+    font-size: 1rem;
     transition: background-color 300ms ease;
     align-content: center;
-   
-    
 }
 
 .btn:hover {
     background-color: #2f5a5a;
 }
 
-#about{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 250px;
-    background-color: #2f5a5a;
-    border-radius: 10%;
-    height: 765px;
-    border: 4px solid black;
-}
-
-.about_container{
-    display: flex;
-    width: 1127px;
-    height: 535px;
-    border: 4px solid black;
-    justify-content: flex-start;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    gap: 1;
-    
-}
-.gif{
-    display: flex;
-    width: 166px;
-    height: 195px;
-    
-
-}
-.box1{
-    display: flex;
-    width: 166px;
-    height: 335px;
-    background-color: #284B63;
-    margin-top: -339px;
-
-}
-.box2{
-    display: flex;
-    width: 404px;
-    height: 306px;
-    background-color: #D9D9D9;
-    border: 2px solid black;
-}
-.education_container{
-    width: 404px;
-    height: 223px;
-    background: #353533;
-    margin-top: -225px;
-    margin-left: 2px;
-}
-.aboutme_container{
-    display: flex;
-    width: 330px;
-    height: 533px;
-    background-color: #D9D9D9;
-    margin-left: 1px;
-}
-.skillset_container{
-    display: flex;
-    width: 217px;
-    height: 535px;
-    background-color: #284B63;
-    margin-left: 4px;
-}
 
 /*PROJECT*/
-#project{  
-    margin-top: 250px;
-    background-color: #D9D9D9;
-    height: 765px;
-}
-
-.project_container{
-    position: absolute;
-    width: 1000px;
-    margin: 180px;
-   
-}
 
 
-.header2{
-    font-size: 48px;
-    text-align: left;
-}
+/*Contact*/
 
-.p_project{
-    font-size: 24px;
-    text-align: left;
-    color: #353535;
-}
+
+
+
+
+
+
+
+
+
