--- a/about.css
+++ b/about.css
@@ -14,9 +14,7 @@
     width: 1131px;
     position: relative;
     border: 4px solid black;
-    
 }
-
 
 .container1{     
     display: grid;
@@ -24,90 +22,209 @@
     grid-template-rows: auto 1fr;
 }
 
-
-
-
-
-
-
 .container2{
     display: flex;
     justify-content: flex-start;
 }
 
-
-
-
-
-
 .gif{
     display:flex;
     height: 125px;
     width: 167px;
-   
-    
 }
+
 .box1{
-   
     width: 169px;
     height: 414px;
     background-color: #284B63;
     margin-top: -180px;
-    
-    
-
 }
+
 .box2{
-    
     width: 404px;
     height: 307px;
     background-color: #D9D9D9;
     border: 1px solid black;
-    
-    
 }
+
 .education_container{
     width: 404px;
     height: 234px;
     background: #353533;
-    
-   
 }
+
 .aboutme_container{
-   
     width: 330px;
     height: 541px;
     background-color: #D9D9D9;
-    /*margin-left: 1px;*/
 }
+
 .skillset_container{
-    
     width: 217px;
     height: 541px;
     background-color: #284B63;
-  /*  margin-left: 4px;*/
 }
 
 
 
-@media screen and (max-width: 980px) {
+
+
+
+/*queries for  about section*/
+@media screen and (max-width: 1130px) {
     .about_container{
-        flex-wrap: wrap;
+        flex-wrap: none;
         justify-content: center;
         border: none;
     }
+
+    #about{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+       
+        background-color: #2f5a5a;
+        border-radius: 10%;
+        height: 765px;
+        border: 4px solid black;
+    }
+    
     .education_container{
         width: 378px;
         height: 234px;
         background: #353533;
     }
+
     .box2{
         width: 378px;
         height: 307px;
         background-color: #D9D9D9;
     }
+
+    .aboutme_container{
+        width: 230px;
+        height: 541px;
+        background-color: #D9D9D9;
+    }
+
+    .skillset_container{
+        width: 200px;
+        height: 541px;
+        background-color: #284B63;
+    }
+
 }
 
+@media screen and (max-width: 980px) {
+
+    #about{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #2f5a5a;
+        border-radius: 10%;
+        height: 1200px;
+        border: 4px solid black;
+    }
+
+    .about_container{
+        flex-wrap: wrap;
+        justify-content: center;
+        border: none;
+    }
+
+    .education_container{
+        width: 378px;
+        height: 234px;
+        background: #353533;
+    }
+
+    .box2{
+        width: 378px;
+        height: 307px;
+        background-color: #D9D9D9;
+    }
+
+    .aboutme_container{
+        width: 330px;
+        height: 541px;
+        background-color: #D9D9D9;
+    }
+
+    .skillset_container{
+        width: 217px;
+        height: 541px;
+        background-color: #284B63;
+    }
+}
+
+
+
+
+
+
+@media screen and (max-width: 540px) {
+    .about_container{
+       
+        gap: 15px;
+    }
+    #about{
+        margin-top: 170px;
+        border-radius: 2%;
+        height: 700px;
+        justify-content: none;
+    }
+    .about_container{
+        margin-top: none;
+        display: flex;
+        gap: 15px;
+    }
+   
+    
+    .gif{
+        height: 90px;
+        width: 66.5px;   
+    }
+    .box1{
+        margin-top: -70px;
+        width: 120px;
+        height: 223px;
+        background-color: #284B63;
+    }
+    .box2{ 
+        width: 160px;
+        height: 160px;
+        background-color: #D9D9D9;    
+    }
+    .education_container{
+        
+        width: 160px;
+        height: 154px;
+        background: #353533;
+
+    }
+
+    .container2{
+       
+       
+        justify-content: flex-start;
+    }
+
+    .aboutme_container{
+   
+        width: 160px;
+        height: 300px;
+        background-color: #D9D9D9;
+        /*margin-left: 1px;*/
+    }
+    .skillset_container{
+        
+        width: 120px;
+        height: 300px;
+        background-color: #284B63;
+      /*  margin-left: 4px;*/
+    }
+}
 
 
 @media screen and (max-width: 360px) {
