--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,52 +1,128 @@
 
 @media screen and (max-width: 980px) {
+
     #desktop-nav {
         display: None;
     }
+
     #hamburger-nav{
         display: flex;
         width: 666.93px;
-        height: 50px;
-       
+        height: 65.18px;
     }
+
     .nav-links:not(:first-child) {display: none;}
     .nav-links.icon {
       float: right;
       display: block;
     }
+
     .ey{
         font-size: 1.3rem;
         margin-right: 1.25rem;
-
     }
+
     .intro {
         padding-left: 50px;
         margin-top: 150px;
         color: #D9D9D9;
-        
     }
+
     .logo{
         font-size: 2.9rem;
-        
     }
-      
+
+}
+
+@media screen and (max-width: 540px) {
+    #hamburger-nav{
+        width: 600px;
+        height: 47px;
+    }
+
+    .section_pic-container {
+        margin: 200px 110px 0px auto;
+        width: 240px;
+        height: 240px;
+        box-shadow: 0 0 0 2px #1AABB0;
+        float:none;
+    }
+
+    .logo{
+        font-size: 2rem;
+        margin: 50px 20px 0;
+    }
+
+
+    .hero{
+        width: 170px;
+        height: 170px;
+    }
+
+    .intro {
+        padding-left: 10px;
+        margin-top: 70px;
+        color: #D9D9D9;
+        text-align: center;
+    }
+
+    .highlight {
+        font-weight: bold;
+        color: #ffff;
+    }
+
+    .ellipse {
+        font-size: 1.9rem;
+        font-weight: normal;
+        background: rgba(0, 0, 0, 0);
+        border: 2px solid #00B4A2;
+        border-radius: 100% / 100%; 
+    }
+
+    h1 {
+        font-size: 1.9rem;
+        font-weight: normal;
+        margin-top: none;
+    }
+
+    p {
+        overflow: visible;
+        font-size: 1.9rem;
+        margin-top: 0.5rem;
+        margin-bottom: 1rem;
+    }
+
+    .btn-container{
+        padding-left: 150px;
+        margin-top: 20px;
+    }
+
+    .btn {
+        font-size: 0.9rem;
+    }
+
 }
 
 @media screen and (max-width: 360px) {
+
     .html{
         font-size: 47%;
     }
+
     .logo{
         font-size: 1.7rem;
         margin: 50px 20px 0;
     }
+
     #hamburger-nav{
         width: 200px;
         height: 40px;
     }
+
     .nav-links{
         font-size: 1px;
     }
+
     .ey{
         font-size: 1rem;
         margin-right: 1.25rem;
@@ -58,29 +134,27 @@
         justify-content: center;
         width: 100%;
         height: 500px;
-        
     }
+
     .section_pic-container {
         margin: 30px 70px 0 auto;
         width: 200px;
         height: 200px;
         box-shadow: 0 0 0 2px #1AABB0;
-       
+        float: right;
     }
+
     .hero{
         width: 140px;
         height: 140px;
     }
 
-
     .intro {
         padding-left: auto;
         margin-top: 200px;
         color: #D9D9D9;
-        
-       
-        
     }
+
     .highlight {
         font-weight: bold;
         color: #ffff;
@@ -92,35 +166,28 @@
         background: rgba(0, 0, 0, 0);
         border: 2px solid #00B4A2;
         border-radius: 100% / 100%; 
-    
-       
     }
+
     h1 {
         font-size: 1.6rem;
         font-weight: normal;
         margin-top: 300px;
     }
+
     p {
         overflow: visible;
         font-size: 1.6rem;
         margin-top: 0.5rem;
         margin-bottom: 1rem;
     }
+
     .btn-container{
-        padding-left: 50px;
+        padding-left: 100px;
         margin-top: 20px;
-    
     }
+
     .btn {
         font-size: 0.7rem;
     }
-    
-    
-
-
-
-
-
-    
 }
     
