--- a/project.css
+++ b/project.css
@@ -3,16 +3,15 @@
     margin-top: 250px;
     background-color: #D9D9D9;
     height: 765px;
+    justify-content: center;
+    align-items: center;
 }
 
 .project_container{
     width: 1000px;
     height: 500px;
-    margin: 180px;
-    
-   
+   /** margin: 180px;*/
 }
-
 
 .header2{
     font-size: 3rem;
@@ -23,9 +22,7 @@
     font-size: 1.5rem;
     text-align: left;
     color: #353535;
-    
 }
-
 
 .project_menu {
     display: flex;
@@ -47,8 +44,7 @@ span{
     align-items: center;
 }
 
-@media screen and (max-width: 360px) {
-
+@media  screen and (max-width: 540px){
     #project{  
         display: flex;
         margin-top: 250px;
@@ -59,15 +55,16 @@ span{
     }
 
     .project_container{
-        margin: 100px auto 0 auto;
+        margin: 100px auto 0 40px;
+       
     }
 
     .header2{
-        font-size: 2.3rem;
+        font-size: 1.2rem;
     }
 
     .p_project{
-        font-size: 1.1rem;
+        font-size: 0.9rem;
     }
 
     .project_menu {
@@ -77,11 +74,10 @@ span{
     }
 
     .content_in_project {
-        font-size: 1.5rem;
+        font-size: 1rem;
         color: black;
         font-weight: 549;
-       
     }
     
-    
 }
+    
