--- a/about.css
+++ b/about.css
@@ -20,6 +20,7 @@
     display: grid;
     grid-template-columns: 0fr 1fr;
     grid-template-rows: auto 1fr;
+    border-radius: 10%;
 }
 
 .container2{
@@ -53,64 +54,115 @@
     background: #353533;
 }
 
+.education_container .oblique_text{
+    color: #D9D9D9;
+    font-style: oblique;
+    font-size: 0.99rem;
+    font-weight: light;
+    margin-top: 40px;
+    margin-left: 20px;
+}
+
+.white_text{
+    display: flex;
+    color: #D9D9D9;
+    font-size: 1.25rem;
+    font-weight: bold;
+    justify-content: center;
+}
+.black_text{
+    display: flex;
+    color: black;
+    font-size: 1.25rem;
+    font-weight: bold;
+    justify-content: center;
+}
+
+.oblique_text{
+    color: #D9D9D9;
+    font-style: oblique;
+    font-size: 0.99rem;
+    font-weight: light;
+    margin-top: 40px;
+    padding-left: 10px;
+}
+
+.normal_text{
+    color:#D9D9D9;
+    font-size: 0.92rem;
+    margin-top: 20px;
+    margin-left: 20px;
+}
+
 .aboutme_container{
     width: 330px;
     height: 541px;
     background-color: #D9D9D9;
+   
+}
+
+.clickme{
+    display: flex;
+    font-size: 3rem;
+    justify-content: center;
+    padding-top: 50px;
+}
+
+.aboutme_container img{
+    display: flex;
+    width: 200px;
+    justify-content: center;
+    padding-top: 80px;
+    margin-left: 50px;
+    
 }
 
 .skillset_container{
-    width: 217px;
+    width: 220px;
     height: 541px;
     background-color: #284B63;
 }
 
+.skillset_container hr {
+    display: flex;
+    width: 180px;
+    margin-left: 1.5vw;
+    
+}
 
+.skillset_container ul{
+    padding-left: 15px;
+    padding-top: 20px;
+    padding-bottom:40px;
+}
 
-
-
+.skillset_container ul li{
+    padding-top: 10px;
+}
 
 /*queries for  about section*/
 @media screen and (max-width: 1130px) {
+
     .about_container{
         flex-wrap: none;
         justify-content: center;
         border: none;
     }
 
-    #about{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-       
-        background-color: #2f5a5a;
-        border-radius: 10%;
-        height: 765px;
-        border: 4px solid black;
-    }
-    
     .education_container{
         width: 378px;
-        height: 234px;
-        background: #353533;
     }
 
     .box2{
         width: 378px;
-        height: 307px;
-        background-color: #D9D9D9;
     }
 
     .aboutme_container{
         width: 230px;
-        height: 541px;
-        background-color: #D9D9D9;
     }
 
     .skillset_container{
         width: 200px;
-        height: 541px;
-        background-color: #284B63;
     }
 
 }
@@ -118,170 +170,83 @@
 @media screen and (max-width: 980px) {
 
     #about{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: #2f5a5a;
-        border-radius: 10%;
         height: 1200px;
-        border: 4px solid black;
     }
 
     .about_container{
         flex-wrap: wrap;
-        justify-content: center;
-        border: none;
-    }
-
-    .education_container{
-        width: 378px;
-        height: 234px;
-        background: #353533;
     }
 
     .box2{
         width: 378px;
-        height: 307px;
-        background-color: #D9D9D9;
     }
 
     .aboutme_container{
         width: 330px;
-        height: 541px;
-        background-color: #D9D9D9;
     }
 
     .skillset_container{
         width: 217px;
-        height: 541px;
-        background-color: #284B63;
+
     }
+
 }
 
-
-
-
-
-
 @media screen and (max-width: 540px) {
-    .about_container{
-       
-        gap: 15px;
-    }
+
     #about{
         margin-top: 170px;
         border-radius: 2%;
         height: 700px;
         justify-content: none;
     }
+
     .about_container{
         margin-top: none;
         display: flex;
         gap: 15px;
     }
    
-    
     .gif{
         height: 90px;
         width: 66.5px;   
     }
+
     .box1{
         margin-top: -70px;
         width: 120px;
         height: 223px;
         background-color: #284B63;
     }
+
     .box2{ 
         width: 160px;
         height: 160px;
         background-color: #D9D9D9;    
     }
+
     .education_container{
-        
         width: 160px;
         height: 154px;
         background: #353533;
-
     }
 
     .container2{
-       
-       
         justify-content: flex-start;
     }
 
     .aboutme_container{
-   
         width: 160px;
         height: 300px;
         background-color: #D9D9D9;
-        /*margin-left: 1px;*/
     }
+
     .skillset_container{
         
         width: 120px;
         height: 300px;
         background-color: #284B63;
-      /*  margin-left: 4px;*/
     }
 }
 
 
-@media screen and (max-width: 360px) {
-    #about{
-        margin-top: 170px;
-        border-radius: 2%;
-        height: 700px;
-        justify-content: none;
-    }
-    .about_container{
-        display: flex;
-        gap: 15px;
-    }
-   
-    
-    .gif{
-        height: 90px;
-        width: 66.5px;   
-    }
-    .box1{
-        margin-top: -70px;
-        width: 120px;
-        height: 223px;
-        background-color: #284B63;
-    }
-    .box2{ 
-        width: 160px;
-        height: 160px;
-        background-color: #D9D9D9;    
-    }
-    .education_container{
-        
-        width: 160px;
-        height: 154px;
-        background: #353533;
-
-    }
-
-    .container2{
-       
-       
-        justify-content: flex-start;
-    }
-
-    .aboutme_container{
-   
-        width: 160px;
-        height: 300px;
-        background-color: #D9D9D9;
-        /*margin-left: 1px;*/
-    }
-    .skillset_container{
-        
-        width: 120px;
-        height: 300px;
-        background-color: #284B63;
-      /*  margin-left: 4px;*/
-    }
-    
-}
