--- a/about.css
+++ b/about.css
@@ -161,6 +161,16 @@
         width: 230px;
     }
 
+    .aboutme_container img{
+        width: 190px;
+        margin-left: 15px;
+    }
+
+    .clickme{
+        font-size: 2.7rem;
+    }
+    
+
     .skillset_container{
         width: 200px;
     }
@@ -183,6 +193,15 @@
 
     .aboutme_container{
         width: 330px;
+    }
+
+    .aboutme_container img{
+        width: 200px;
+        margin-left: 60px;
+    }
+
+    .clickme{
+        font-size: 3rem;
     }
 
     .skillset_container{
@@ -231,6 +250,44 @@
         background: #353533;
     }
 
+    .education_container .oblique_text{
+        font-size: 0.65rem;
+        margin-top: 30px;
+        margin-left: 10px;
+    }
+    
+    .white_text{
+        display: flex;
+        color: #D9D9D9;
+        font-size: .90rem;
+        font-weight: bold;
+        justify-content: center;
+    }
+    .black_text{
+        display: flex;
+        color: black;
+        font-size: .90rem;
+        font-weight: bold;
+        justify-content: center;
+    }
+    
+    .oblique_text{
+        color: #D9D9D9;
+        font-style: oblique;
+        font-size: 0.65rem;
+        font-weight: light;
+        margin-top: 10px;
+        padding-left: 10px;
+    }
+    
+    .normal_text{
+        color:#D9D9D9;
+        font-size: 0.63rem;
+        margin-top: 20px;
+        margin-left: 20px;
+    }
+    
+
     .container2{
         justify-content: flex-start;
     }
@@ -241,11 +298,39 @@
         background-color: #D9D9D9;
     }
 
-    .skillset_container{
+    .clickme{
+        display: flex;
+        font-size: 1.7rem;
+        justify-content: center;
+        padding-top: 50px;
+    }
+    
+    .aboutme_container img{
+        display: flex;
+        width: 100px;
+        justify-content: center;
+        padding-top: 40px;
+        margin-left: 28px;
         
+    }
+    .skillset_container{
         width: 120px;
         height: 300px;
         background-color: #284B63;
+    }
+
+    .skillset_container hr {
+        width: 100px;
+    }
+    
+    .skillset_container ul{
+        padding-left: 15px;
+        padding-top: 10px;
+        padding-bottom:10px;
+    }
+    
+    .skillset_container ul li{
+        padding-top: 10px;
     }
 }
 
